[gd_scene load_steps=5 format=3 uid="uid://db0evjs442cr"]

[ext_resource type="Script" uid="uid://c50mxut6u0kuu" path="res://scenes/main.gd" id="1_u34hk"]
[ext_resource type="PackedScene" uid="uid://ddj7lxy8426dr" path="res://scenes/main_menu/main_menu.tscn" id="2_kikt3"]
[ext_resource type="PackedScene" uid="uid://deucr2qqrbhs0" path="res://scenes/world/lawn_map/lawn.tscn" id="3_6x2or"]
[ext_resource type="PackedScene" uid="uid://itmdgqlhwo3b" path="res://scenes/ui/almanac/almanac_control.tscn" id="4_4payd"]

[node name="Main" type="Node"]
script = ExtResource("1_u34hk")

[node name="Lawn" parent="." instance=ExtResource("3_6x2or")]

[node name="Main_Menu" parent="." instance=ExtResource("2_kikt3")]
mouse_filter = 2

[node name="Canvas_Layer" type="CanvasLayer" parent="."]
layer = 2

[node name="Almanac_Control" parent="Canvas_Layer" instance=ExtResource("4_4payd")]
visible = false
top_level = true

[connection signal="almanac_pressed" from="Lawn" to="." method="_on_almanac_pressed"]
[connection signal="left_level" from="Lawn" to="." method="_on_lawn_left_level"]
[connection signal="almanac_pressed" from="Main_Menu" to="." method="_on_almanac_pressed"]
[connection signal="play_pressed" from="Main_Menu" to="." method="_on_main_menu_play_pressed"]
[connection signal="closed" from="Canvas_Layer/Almanac_Control" to="." method="_on_almanac_closed"]
